# celery-sqs-example

./: .env.local  .gitignore  Makefile  README.md  celerybeat-schedule.db  pyproject.toml  test.http
awscli/: Makefile
docker/: .env  Dockerfile  compose.yaml
src/jobs/: app.py  cron.py  db.py  scheduler.py  worker.py
src/jobs/tasks/: task1.py  task2.py  task3.py
src/jobs/worker/: tasks.py
src/server/: main.py
src/test/: call_by_delay.py  call_by_name.py  call_delay.py  put.py
world-db/: Makefile
