[tool.poetry]
name = "celery-sqs-example"
version = "0.1.0"
description = ""
authors = ["Motonobu Kuryu <revision279@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
celery = {extras = ["sqs"], version = "^5.4.0"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
mysql-connector-python = "^9.2.0"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
